// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LendoLoadingAnimation /> With custom props should match with snapshot 1`] = `
<svg
  aria-hidden={true}
  className="sc-bczRLJ gexKYo k-LendoLoadingAnimation customClassName"
  color="red"
  height="56"
  viewBox="0 0 28 28"
  width="56"
  xmlns="http://www.w3.org/2000/svg"
>
  <mask
    id="mask"
  >
    <circle
      cx="14"
      cy="14"
      fill="#FFF"
      r="13"
    />
  </mask>
  <g
    mask="url(#mask)"
  >
    <path
      d="M0 0h28v28H0z"
      fill="#fff"
    />
    <path
      d="M16 19.4 18.5 0l-9 .1L12 19.5 0 1v27h28V1L16 19.4Z"
      fill="#caf4fe"
    />
    <g
      className="animated_col"
      id="col_1"
    >
      <path
        d="M6.1 39.4c.4 0 .6-.3.6-.6V19.3c0-.6-.5-1.1-1.1-1.1h-5c-.7 0-1.2.5-1.2 1.1v19.5c0 .3.3.6.6.6h6.1Zm0-.6h-6V19.4c0-.4.2-.6.5-.6h5c.3 0 .5.2.5.6v19.4Z"
        fill="#fff"
      />
      <path
        d="M6.1 38.8h-6V19.4c0-.4.2-.6.5-.6h5c.3 0 .5.2.5.6v19.4Z"
      />
    </g>
    <g
      className="animated_col"
      id="col_2"
    >
      <path
        d="M9.2 35.1c.3 0 .6-.3.6-.6V15.1c0-.6-.5-1.2-1.2-1.2H7.4c-.7 0-1.2.6-1.2 1.2v19.4c0 .3.3.6.6.6h2.4Zm0-.6H6.8V15.1c0-.3.3-.6.6-.6h1.2c.3 0 .6.3.6.6v19.4Z"
        fill="#fff"
      />
      <path
        d="M9.2 34.5H6.8V15.1c0-.3.3-.6.6-.6h1.2c.3 0 .6.3.6.6v19.4Z"
      />
    </g>
    <g
      className="animated_col"
      id="col_3"
    >
      <path
        d="M12.2 31.6c.4 0 .6-.3.6-.6V11.6c0-.6-.5-1.1-1.1-1.2h-1.3c-.7 0-1.2.6-1.2 1.2V31c0 .3.3.6.6.6h2.4Zm0-.6H9.8V11.6c0-.3.3-.6.6-.6h1.3c.3 0 .5.3.5.6V31Z"
        fill="#fff"
      />
      <path
        d="M12.2 31H9.8V11.6c0-.3.3-.6.6-.6h1.3c.3 0 .5.3.5.6V31Z"
      />
    </g>
    <g
      className="animated_col"
      id="col_7"
    >
      <path
        d="M21.2 38.8c0 .3.3.6.6.6H28c.3 0 .6-.3.6-.6V19.3c0-.6-.6-1.1-1.2-1.1h-5c-.7 0-1.2.5-1.2 1.1v19.5Zm.6 0H28V19.4c0-.4-.3-.6-.6-.6h-5c-.3 0-.6.2-.6.6v19.4Z"
        fill="#fff"
      />
      <path
        d="M21.8 38.8H28V19.4c0-.4-.3-.6-.6-.6h-5c-.3 0-.6.2-.6.6v19.4Z"
      />
    </g>
    <g
      className="animated_col"
      id="col_6"
    >
      <path
        d="M18.2 34.5c0 .3.2.6.6.6h2.4c.3 0 .6-.3.6-.6V15.1c0-.6-.6-1.2-1.2-1.2h-1.3c-.6 0-1.1.6-1.1 1.2v19.4Zm.6 0h2.4V15.1c0-.3-.3-.6-.6-.6h-1.3c-.3 0-.5.3-.5.6v19.4Z"
        fill="#fff"
      />
      <path
        d="M18.8 34.5h2.4V15.1c0-.3-.3-.6-.6-.6h-1.3c-.3 0-.5.3-.5.6v19.4Z"
      />
    </g>
    <g
      className="animated_col"
      id="col_5"
    >
      <path
        d="M15.1 31c0 .3.3.6.6.6h2.4c.4 0 .6-.3.6-.6V11.6c0-.6-.5-1.1-1.1-1.2h-1.3c-.6 0-1.1.6-1.2 1.2V31Zm.6 0h2.4V11.6c0-.3-.2-.6-.5-.6h-1.3c-.3 0-.6.3-.6.6V31Z"
        fill="#fff"
      />
      <path
        d="M15.7 31h2.4V11.6c0-.3-.2-.6-.5-.6h-1.3c-.3 0-.6.3-.6.6V31Z"
      />
    </g>
    <g
      className="animated_col"
      id="col_4"
    >
      <path
        d="M12.2 31.4c0 .4.3.6.6.6h2.4c.3 0 .6-.2.6-.6V8.6c0-.6-.5-1.2-1.2-1.2h-1.2c-.7 0-1.2.6-1.2 1.2v22.8Zm.6 0h2.4V8.6c0-.3-.3-.6-.6-.6h-1.2c-.3 0-.6.3-.6.6v22.8Z"
        fill="#fff"
      />
      <path
        d="M12.8 31.4h2.4V8.6c0-.3-.3-.6-.6-.6h-1.2c-.3 0-.6.3-.6.6v22.8Z"
      />
    </g>
  </g>
  <path
    d="M14 0a14 14 0 1 1 0 28 14 14 0 0 1 0-28Zm0 1.8a12.2 12.2 0 1 1 0 24.5 12.2 12.2 0 0 1 0-24.5Z"
    fillRule="evenodd"
  />
</svg>
`;

exports[`<LendoLoadingAnimation /> With default props should match with snapshot 1`] = `
<svg
  aria-hidden={true}
  className="sc-bczRLJ gexKYo k-LendoLoadingAnimation"
  height="56"
  viewBox="0 0 28 28"
  width="56"
  xmlns="http://www.w3.org/2000/svg"
>
  <mask
    id="mask"
  >
    <circle
      cx="14"
      cy="14"
      fill="#FFF"
      r="13"
    />
  </mask>
  <g
    mask="url(#mask)"
  >
    <path
      d="M0 0h28v28H0z"
      fill="#fff"
    />
    <path
      d="M16 19.4 18.5 0l-9 .1L12 19.5 0 1v27h28V1L16 19.4Z"
      fill="#caf4fe"
    />
    <g
      className="animated_col"
      id="col_1"
    >
      <path
        d="M6.1 39.4c.4 0 .6-.3.6-.6V19.3c0-.6-.5-1.1-1.1-1.1h-5c-.7 0-1.2.5-1.2 1.1v19.5c0 .3.3.6.6.6h6.1Zm0-.6h-6V19.4c0-.4.2-.6.5-.6h5c.3 0 .5.2.5.6v19.4Z"
        fill="#fff"
      />
      <path
        d="M6.1 38.8h-6V19.4c0-.4.2-.6.5-.6h5c.3 0 .5.2.5.6v19.4Z"
      />
    </g>
    <g
      className="animated_col"
      id="col_2"
    >
      <path
        d="M9.2 35.1c.3 0 .6-.3.6-.6V15.1c0-.6-.5-1.2-1.2-1.2H7.4c-.7 0-1.2.6-1.2 1.2v19.4c0 .3.3.6.6.6h2.4Zm0-.6H6.8V15.1c0-.3.3-.6.6-.6h1.2c.3 0 .6.3.6.6v19.4Z"
        fill="#fff"
      />
      <path
        d="M9.2 34.5H6.8V15.1c0-.3.3-.6.6-.6h1.2c.3 0 .6.3.6.6v19.4Z"
      />
    </g>
    <g
      className="animated_col"
      id="col_3"
    >
      <path
        d="M12.2 31.6c.4 0 .6-.3.6-.6V11.6c0-.6-.5-1.1-1.1-1.2h-1.3c-.7 0-1.2.6-1.2 1.2V31c0 .3.3.6.6.6h2.4Zm0-.6H9.8V11.6c0-.3.3-.6.6-.6h1.3c.3 0 .5.3.5.6V31Z"
        fill="#fff"
      />
      <path
        d="M12.2 31H9.8V11.6c0-.3.3-.6.6-.6h1.3c.3 0 .5.3.5.6V31Z"
      />
    </g>
    <g
      className="animated_col"
      id="col_7"
    >
      <path
        d="M21.2 38.8c0 .3.3.6.6.6H28c.3 0 .6-.3.6-.6V19.3c0-.6-.6-1.1-1.2-1.1h-5c-.7 0-1.2.5-1.2 1.1v19.5Zm.6 0H28V19.4c0-.4-.3-.6-.6-.6h-5c-.3 0-.6.2-.6.6v19.4Z"
        fill="#fff"
      />
      <path
        d="M21.8 38.8H28V19.4c0-.4-.3-.6-.6-.6h-5c-.3 0-.6.2-.6.6v19.4Z"
      />
    </g>
    <g
      className="animated_col"
      id="col_6"
    >
      <path
        d="M18.2 34.5c0 .3.2.6.6.6h2.4c.3 0 .6-.3.6-.6V15.1c0-.6-.6-1.2-1.2-1.2h-1.3c-.6 0-1.1.6-1.1 1.2v19.4Zm.6 0h2.4V15.1c0-.3-.3-.6-.6-.6h-1.3c-.3 0-.5.3-.5.6v19.4Z"
        fill="#fff"
      />
      <path
        d="M18.8 34.5h2.4V15.1c0-.3-.3-.6-.6-.6h-1.3c-.3 0-.5.3-.5.6v19.4Z"
      />
    </g>
    <g
      className="animated_col"
      id="col_5"
    >
      <path
        d="M15.1 31c0 .3.3.6.6.6h2.4c.4 0 .6-.3.6-.6V11.6c0-.6-.5-1.1-1.1-1.2h-1.3c-.6 0-1.1.6-1.2 1.2V31Zm.6 0h2.4V11.6c0-.3-.2-.6-.5-.6h-1.3c-.3 0-.6.3-.6.6V31Z"
        fill="#fff"
      />
      <path
        d="M15.7 31h2.4V11.6c0-.3-.2-.6-.5-.6h-1.3c-.3 0-.6.3-.6.6V31Z"
      />
    </g>
    <g
      className="animated_col"
      id="col_4"
    >
      <path
        d="M12.2 31.4c0 .4.3.6.6.6h2.4c.3 0 .6-.2.6-.6V8.6c0-.6-.5-1.2-1.2-1.2h-1.2c-.7 0-1.2.6-1.2 1.2v22.8Zm.6 0h2.4V8.6c0-.3-.3-.6-.6-.6h-1.2c-.3 0-.6.3-.6.6v22.8Z"
        fill="#fff"
      />
      <path
        d="M12.8 31.4h2.4V8.6c0-.3-.3-.6-.6-.6h-1.2c-.3 0-.6.3-.6.6v22.8Z"
      />
    </g>
  </g>
  <path
    d="M14 0a14 14 0 1 1 0 28 14 14 0 0 1 0-28Zm0 1.8a12.2 12.2 0 1 1 0 24.5 12.2 12.2 0 0 1 0-24.5Z"
    fillRule="evenodd"
  />
</svg>
`;
